[package]
name = "clubjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.14.0"
clubjs-macros = { version = "0.1.0", path = "clubjs-macros" }
indexmap = "2.0.2"
once_cell = "1.18.0"
smallvec = { version = "1.11.1", features = ["const_generics", "const_new", "union"] }
